[package]
edition = "2021"
name = "lr2021-apps"
version = "0.1.0"
license = "MIT"

[dependencies]
lr2021 = {version = "0.1.0", features=["defmt"]}
# lr2021 = {version = "0.1.0", path = "../lr2021", features=["defmt"]}

embassy-stm32 = { version = "0.2.0", features = [ "defmt", "unstable-pac", "stm32l476rg", "memory-x", "time-driver-any", "exti", "chrono", "dual-bank"]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", ] }
embassy-embedded-hal = { version = "0.4.0" }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-net-adin1110 = { version = "0.3.0"}
embassy-net = { version = "0.7.0", features = ["defmt",  "udp", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.0" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
chrono = { version = "^0.4", default-features = false }
static_cell = "2"

micromath = "2.0.0"

[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-net-adin1110 = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "aba545aea07f4c54e587f03000bd1a2439c89f70"}

[profile.release]
debug = 2
